# AI-agent-chatbot

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  ingest_math_papers.py  package-lock.json  package.json  requirements.txt  tailwind.config.js
.trae/documents/: hkdse-2012-core-math-pdf-page-design.md  hkdse-2012-core-math-pdf-prd.md  hkdse-2012-core-math-pdf-tad.md  ml-chatbot-prd.md  ml-chatbot-tad.md
.vercel/: project.json
api/: app.ts
api/controllers/: chat.controller.ts  upload.controller.ts
api/routes/: eval.ts  upload.ts
api/services/: llm.service.ts  rag.service.ts  supabase.service.ts  upload-context.service.ts  vectorstore.service.ts
backups/20260413_163447/: changed_files.txt  git_status.txt  unstaged.patch
backups/20260413_163447/files/: .env.example  README.md  nodemon.json  package-lock.json  package.json  vite.config.ts
python_backend/: .env.example  README.md  pyproject.toml
python_backend/app/: config.py  graph.py  main.py  models.py
python_backend/app/services/: clarify_memory.py  eval_service.py  marking_alignment.py  pdf_math_parser.py  reranker.py  upload_context.py  vectorstore.py
python_backend/tests/: test_marking_alignment.py  test_pdf_math_parser.py  test_question_boundary_detection.py
scripts/: chroma-inspect.ts  ck12-to-md.ts  ingest-file.ts  khan-to-md.ts  seed.ts
src/: App.tsx  index.css  main.tsx
src/components/Chat/: ChatBox.tsx  MessageBubble.tsx
src/components/Eval/: EvalDashboard.tsx
src/components/Sidebar/: FileUpload.tsx  Sidebar.tsx
src/store/: useChatStore.ts
(+30 files in other folders)
