[project]
name = "math-rag-langgraph-backend"
version = "0.1.0"
description = "Math-optimized RAG backend using LangGraph + LangChain"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "langchain>=0.2.14",
  "langchain-text-splitters>=0.2.2",
  "langgraph>=0.2.20",
  "langchain-openai>=0.1.22",
  "langchain-community>=0.2.12",
  "langchain-huggingface>=0.0.3",
  "chromadb>=0.5.5",
  "sentence-transformers>=3.0.1",
  "sympy>=1.13.2",
  "pypdf>=4.3.1",
  "httpx>=0.27.0",
  "PyMuPDF>=1.24.9",
  "pix2text>=1.1.0"
]

[tool.uv]
package = false
